--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -35,7 +35,7 @@ header {
   height: 800px;
   min-height: 500px;
   width: 100%;
-  background: #161415 url(../images/header-background.jpg) no-repeat top center;
+  /* background: #161415 url(../images/header-background.jpg) no-repeat top center; */
   background-size: cover !important;
   -webkit-background-size: cover !important;
   text-align: center;
@@ -55,7 +55,7 @@ header .banner {
   margin: 0 auto;
   width: 85%;
   padding-bottom: 30px;
-  stext-align: center;
+  text-align: center;
 }
 
 header .banner-text {
@@ -176,7 +176,7 @@ ul#nav li {
 }
 
 /* Links */
-ul#nav li a {
+/* ul#nav li a {
   /* 8px padding top + 8px padding bottom + 32px line-height = 48px */
 
   display: inline-block;
@@ -191,7 +191,7 @@ ul#nav li a {
   -o-transition: color 0.2s ease-in-out;
   -ms-transition: color 0.2s ease-in-out;
   transition: color 0.2s ease-in-out;
-}
+} */
 
 ul#nav li a:active {
   background-color: transparent !important;
