--- a/public/css/defaultX.css
+++ b/public/css/defaultX.css
@@ -447,8 +447,8 @@ p a:visited {
 
 ul,
 ol {
-  margin-bottom: 24px;
-  margin-top: 12px;
+  /* margin-bottom: 24px;
+  margin-top: 12px; */
 }
 ul {
   list-style: none outside;
