--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -26,6 +26,15 @@ body {
   background: #0f0f0f;
 }
 
+h1 {
+  font: 15px/24px "opensans-semibold", sans-serif;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  text-align: center;
+  margin-bottom: 48px;
+  color: #95a3a3;
+}
+
 /* ------------------------------------------------------------------ */
 /* b. Header Styles
 /* ------------------------------------------------------------------ */
@@ -106,7 +115,7 @@ header .social li a:hover {
 }
 
 /* scrolldown link */
-header .scrolldown a {
+/* header .scrolldown a {
   position: absolute;
   bottom: 30px;
   left: 50%;
@@ -127,7 +136,7 @@ header .scrolldown a {
 }
 header .scrolldown a:hover {
   color: #11abb0;
-}
+} */
 
 /* primary navigation
 --------------------------------------------------------------------- */
@@ -203,14 +212,14 @@ ul#nav li.current a {
 /* ------------------------------------------------------------------ */
 /* c. About Section
 /* ------------------------------------------------------------------ */
-
+/* 
 #about {
   background: #2b2b2b;
   padding-top: 96px;
   padding-bottom: 66px;
   overflow: hidden;
-}
-
+} */
+/* 
 #about a,
 #about a:visited {
   color: #fff;
@@ -257,7 +266,7 @@ ul#nav li.current a {
 #about .download .button i {
   margin-right: 15px;
   font-size: 20px;
-}
+} */
 
 /* ------------------------------------------------------------------ */
 /* d. Resume Section
