--- a/public/css/myStyles.css
+++ b/public/css/myStyles.css
@@ -9,21 +9,21 @@ h1 {
 /* ------------------------------------------------------------------ */
 /* b. Header Styles
 /* ------------------------------------------------------------------ */
-
+/* 
 header {
   position: relative;
   height: 800px;
   min-height: 500px;
   width: 100%;
   /* background: #161415 url(../images/header-background.jpg) no-repeat top center; */
-  background-size: cover !important;
+/* background-size: cover !important;
   -webkit-background-size: cover !important;
   text-align: center;
   overflow: hidden;
-}
+} */
 
 /* vertically center banner section */
-header:before {
+/* header:before {
   content: "";
   display: inline-block;
   vertical-align: middle;
@@ -40,8 +40,8 @@ header .banner {
 
 header .banner-text {
   width: 100%;
-}
-header .banner-text h1 {
+} */
+/* header .banner-text h1 {
   font: 64px/1.1em "opensans-bold", sans-serif;
   color: #fff;
   text-transform: capitalize;
@@ -68,7 +68,7 @@ header .banner-text hr {
 }
 
 /* header social links */
-header .social {
+/* header .social {
   margin: 24px 0;
   padding: 0;
   font-size: 30px;
@@ -81,7 +81,7 @@ header .social li {
   &:hover {
     color: #11abb0;
   }
-}
+}  */
 /* header .social li a {
   color: #fff;
 }
