--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,23 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  font-family: "Vollkorn", serif;
+}
+
+h1,
+h2,
+h3 {
+  font-family: "Unica One", sans-serif;
+  font-weight: lighter;
+  letter-spacing: 1.5px;
+  color: red;
+}
+h1 {
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: lighter;
+  font-size: 23px;
+  letter-spacing: 4px;
+  margin-bottom: 3rem;
+  color: grey;
 }
